# is-it-a-bird

./: .env  .pdm.toml  is-it-a-bird.ipynb  pyproject.toml
.ipynb_checkpoints/: is-it-a-bird-checkpoint.ipynb  pyproject-checkpoint.toml
code/: is-it-a-bird.ipynb
code/.ipynb_checkpoints/: is-it-a-bird-checkpoint.ipynb
